add sync meit international hotel basis method